autotools: Use LANG=C.UTF-8 rather than LANG=C

Various processes run as part of `make all` for typical projects will
end up giving output full of replacement characters, or crashing, if run
in an ASCII locale. Explicitly run them in a UTF-8 locale to avoid that.

This assumes (I haven’t verified) that the code in Builder which parses
the `make all` output is UTF-8–safe.

See https://gitlab.gnome.org/GNOME/glib/issues/1430.

Signed-off-by: Philip Withnall <withnall@endlessm.com>